[BUGFIX] remove css for icon which is never visible

--- a/felayout_t3kit/dev/styles/main/iconFont.less
+++ b/felayout_t3kit/dev/styles/main/iconFont.less
@@ -31,7 +31,6 @@
 .icon-t3-quoteMark:before { content: "\e0de"; } // quote
 .icon-text-btn__link:after { content: "\e91c"; } // leftIconTextButton
 .icon-text-btn__sham-link:after { content: "\e91c"; } // leftIconTextButton
-.big-icon-text-btn__link:after { content: "\e91c"; } // bigIconTextButton
 .big-icon-text-btn__sham-link:after { content: "\e91c"; } // bigIconTextButton
 .img-text-link__img-link:before { content: "\e943"; } // imageTextLink
 .logo-carousel__btn-next:before { content: '\e91d'; } // logo carousel next
